--- a/src/wheel/Wheel.css
+++ b/src/wheel/Wheel.css
@@ -19,18 +19,14 @@
 .slices {
   position: absolute;
   text-transform: uppercase;
-  color: #797979;
+  color: #383838;
   letter-spacing: 1px;
   display: flex;
   flex-direction: column;
   width: 200px;
 }
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 200,
-  'GRAD' 200,
-  'opsz' 20
+  font-variation-settings: "FILL" 0, "wght" 200, "GRAD" 200, "opsz" 20;
 }
 .info {
   display: flex;
@@ -173,6 +169,23 @@
   .slice-title {
     font-size: 15px;
   }
+  .slice-title-2,
+  .slice-title-3 {
+    left: 65%;
+  }
+  .slice-title-6,
+  .slice-title-7 {
+    left: 18%;
+  }
+}
+@media (max-width: 1281px) {
+  .slice-title {
+    font-size: 13px;
+  }
+  .slice-value {
+    font-size: 22px;
+    font-weight: 900;
+  }
   .slice-title-1,
   .slice-title-4 {
     left: 55%;
@@ -183,7 +196,7 @@
   }
   .slice-title-2,
   .slice-title-3 {
-    left: 65%;
+    left: 62%;
   }
   .slice-title-2,
   .slice-title-7 {
@@ -203,7 +216,7 @@
   }
   .slice-title-6,
   .slice-title-7 {
-    left: 18%;
+    left: 21%;
   }
 }
 @media (max-width: 1185px) {
@@ -512,9 +525,45 @@
     left: -9%;
   }
 }
-
-@media (max-width: 435px) and (max-height: 935px) {
-    .slices {
+@media (max-width: 435px) {
+  .slice-title {
+    font-size: 13px;
+  }
+  .slice-title-1,
+  .slice-title-4 {
+    left: 60%;
+  }
+  .slice-title-1,
+  .slice-title-8 {
+    top: 20%;
+  }
+  .slice-title-2,
+  .slice-title-3 {
+    left: 60%;
+  }
+  .slice-title-2,
+  .slice-title-7 {
+    top: 25%;
+  }
+  .slice-title-3,
+  .slice-title-6 {
+    top: 80%;
+  }
+  .slice-title-4,
+  .slice-title-5 {
+    top: 73%;
+  }
+  .slice-title-5,
+  .slice-title-8 {
+    left: -5%;
+  }
+  .slice-title-6,
+  .slice-title-7 {
+    left: 2%;
+  }
+}
+@media (max-width: 431px) and (max-height: 935px) {
+  .slices {
     width: 190px;
   }
   .responsive-title h1 {
@@ -557,8 +606,6 @@
     left: 2%;
     align-items: start;
   }
-}
-@media (max-width: 435px) and (max-height: 900px) {
 }
 
 @media (max-width: 415px) {
