--- a/src/wheel/Wheel.css
+++ b/src/wheel/Wheel.css
@@ -247,10 +247,13 @@
 }
 @media (max-width: 1025px) {
   .slices {
-    width: 220px;
+    width: 150px;
+  }
+  .slice-value {
+    font-size: 40px;
   }
   .slice-title {
-    font-size: 16px;
+    font-size: 22px;
   }
   .slice-title-1,
   .slice-title-4 {
@@ -258,11 +261,11 @@
   }
   .slice-title-1,
   .slice-title-8 {
-    top: 25%;
+    top: 22%;
   }
   .slice-title-2,
   .slice-title-3 {
-    left: 80%;
+    left: 85%;
   }
   .slice-title-2,
   .slice-title-7 {
@@ -278,11 +281,13 @@
   }
   .slice-title-5,
   .slice-title-8 {
-    left: 15%;
+    text-align: right;
+    left: 20%;
   }
   .slice-title-6,
   .slice-title-7 {
-    left: -1%;
+    left: 0%;
+    text-align: right;
   }
 }
 @media (max-width: 1025px) and (max-height: 770px) {
@@ -330,7 +335,7 @@
     width: 190px;
   }
   .slice-title {
-    font-size: 15px;
+    font-size: 20px;
   }
   .slice-title-1,
   .slice-title-4 {
@@ -346,7 +351,7 @@
   }
   .slice-title-2,
   .slice-title-7 {
-    top: 36%;
+    top: 35%;
   }
   .slice-title-3,
   .slice-title-6 {
@@ -362,7 +367,19 @@
   }
   .slice-title-6,
   .slice-title-7 {
-    left: -0.5%;
+    left: -1%;
+  }
+}
+@media (max-width: 821px) {
+  .slice-title {
+    font-size: 18px;
+  }
+  .slice-title-7 {
+    left: 5%;
+    width: 120px;
+  }
+  .slice-value {
+    font-size: 28px;
   }
 }
 @media (max-width: 769px) {
@@ -374,6 +391,10 @@
     letter-spacing: 0.5px;
     padding-bottom: 40px;
   }
+  .slice-title {
+    font-size: 20px;
+  }
+
   .responsive-title h1 {
     font-size: 45px;
     font-weight: 400;
@@ -381,10 +402,6 @@
   .slice-title-1,
   .slice-title-4 {
     left: 60%;
-  }
-  .slice-title-1,
-  .slice-title-8 {
-    top: 27%;
   }
   .slice-title-2,
   .slice-title-3 {
@@ -406,9 +423,12 @@
   .slice-title-8 {
     left: 15%;
   }
-  .slice-title-6,
+  .slice-title-6 {
+    left: 1%;
+  }
   .slice-title-7 {
-    left: -4%;
+    left: 9%;
+    width: 110px;
   }
 }
 
@@ -485,44 +505,50 @@
   }
 }
 @media (max-width: 545px) {
+  .slices {
+    width: 130px;
+  }
   .responsive-title h1 {
     display: block;
     font-size: 28px;
   }
   .slice-title {
-    font-size: 10px;
+    font-size: 12px;
   }
   .slice-title-1,
   .slice-title-4 {
-    left: 60%;
+    left: 55%;
   }
   .slice-title-1,
   .slice-title-8 {
-    top: 25%;
+    top: 24%;
   }
   .slice-title-2,
   .slice-title-3 {
-    left: 77%;
+    left: 80%;
   }
   .slice-title-2,
   .slice-title-7 {
-    top: 36%;
+    top: 35%;
   }
   .slice-title-3,
   .slice-title-6 {
-    top: 63%;
+    top: 60%;
   }
   .slice-title-4,
   .slice-title-5 {
-    top: 75%;
+    top: 78%;
   }
   .slice-title-5,
   .slice-title-8 {
-    left: 10%;
+    left: 20%;
   }
-  .slice-title-6,
+  .slice-title-6 {
+    left: -5%;
+  }
   .slice-title-7 {
-    left: -9%;
+    width: 100px;
+    left: 1%;
   }
 }
 @media (max-width: 435px) {
