--- a/src/wheel/WheelQuadrant.css
+++ b/src/wheel/WheelQuadrant.css
@@ -55,7 +55,9 @@ svg {
 }
 @media (max-width: 915px) {
   svg {
-    left: 16%;
+    left: 20%;
+    width: 60vw;
+    top: 21%;
   }
 }
 @media (max-width: 825px) {
@@ -84,10 +86,10 @@ svg {
 }
 @media (max-width: 545px) {
   svg {
-    top: 7%;
-    width: 90%;
-    height: 90%;
-    left: 5%;
+    top: 23%;
+    width: 60%;
+    height: 60%;
+    left: 20%;
   }
 }
 @media (max-width: 435px) {
@@ -103,7 +105,10 @@ svg {
 
 @media (max-width: 415px) {
   svg {
-    top: 5%;
+    top: 7%;
+    width: 80%;
+    height: 80%;
+    left: 10%;
   }
 }
 @media (max-width: 395px) {
