--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,20 +1,24 @@
 .navbar {
-  min-height: 80px;
+  min-height: 60px;
   display: flex;
   align-content: space-between;
   padding: 5px;
 }
 img {
-  margin-left: 40px;
+  margin-left: 30px;
+  width: 90px;
 }
-
+.responsive-title {
+  display: none;
+  height: 0px;
+}
 .title {
   color: rgb(86, 86, 86);
   text-align: center;
   font-weight: 400;
   font-family: "EB Garamond", serif;
   letter-spacing: 1.5px;
-  font-size: 58px;
+  font-size: 40px;
   padding-bottom: 0;
   margin-bottom: 10px;
   margin-top: 0px;
@@ -22,23 +26,35 @@ img {
 .space {
   width: 160px;
 }
-@media (max-width: 1025px) {
-  .title {
-    font-size: 42px;
-  }
-}
 
-@media (max-width: 1281px) {
+@media (min-width: 1381px) {
   .title {
-    font-size: 48px;
-  }
-}
-@media (max-width: 768px) {
-  .navbar {
-    max-height: 50px;
+    font-size: 50px;
   }
   img {
-    width: 80px;
+    width: 120px;
+  }
+}
+@media (max-width: 850px) {
+  .responsive-title {
+    display: block;
+    height: 80px;
+    font-family: "EB Garamond", serif;
+    text-align: center;
+    color: rgb(86, 86, 86);
+    position: absolute;
+    top: 20px;
+    left: 35%;
+  }
+  .h1,
+  h1 {
+    font-size: 38px;
+  }
+  .navbar {
+    max-height: 80px;
+  }
+  img {
+    width: 90px;
   }
   .navbar {
     align-content: center;
@@ -53,8 +69,5 @@ img {
   }
   .space {
     display: none;
-  }
-  .title {
-    font-size: 45px;
   }
 }
