--- a/src/utils/Download.css
+++ b/src/utils/Download.css
@@ -32,8 +32,8 @@ input {
     margin-top: 5px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 850px) {
   .download-content {
-    visibility: hidden;
+    display: none;
   }
 }
