--- a/src/utils/ResetWheel.css
+++ b/src/utils/ResetWheel.css
@@ -10,9 +10,17 @@
   z-index: 20;
 }
 
+@media (max-width: 1200px) {
+  .reset-btn {
+    top: 10%;
+  }
+  .btn-light {
+    font-size: 18px;
+  }
+}
 @media (max-width: 1025px) {
   .reset-btn {
-    top: 15%;
+    top: 10%;
   }
   .btn-light {
     font-size: 18px;
@@ -30,6 +38,7 @@
 @media (max-width: 770px) {
   .reset-btn {
     top: 11%;
+    height: 50px;
   }
   .btn-light {
     font-size: 16px;
