--- a/src/wheel/TableGenerator.css
+++ b/src/wheel/TableGenerator.css
@@ -36,6 +36,11 @@ tbody th {
   font-weight: 900;
 }
 
+@media ((max-width: 1025px) and (max-height: 77px)) {
+  table {
+    bottom: -300px;
+  }
+}
 @media (max-width: 850px) {
   table {
     bottom: 140px;
@@ -44,5 +49,23 @@ tbody th {
 @media (max-width: 768px) {
   table {
     bottom: 100px;
+  }
+}
+@media (max-width: 431px) {
+  table {
+    bottom: 5%;
+  }
+  .row-name {
+    font-size: 14px;
+  }
+  .percentage {
+    width: 30px;
+  }
+
+  span .row {
+    margin-right: 20px;
+  }
+  tbody th {
+    padding: 7px 25px;
   }
 }
